v1.1.1
[*] Fix empty file name while restore
[+] Allow list with param DATE via Capistrano
[+] Add check for file and folder exist

v1.1.0
[+] Allow restore any backup via Capistarano

v1.0.3
[*] Fix postgresql backup
[+] English doc
[+] Capistrano 2 support
[+] Allow restore lasts backup via Capistarano
[+] Drop tables before restore

v1.0.2
[*] Update gemspec
[*] Decrease depend gem versions

v1.0.0:
[+] Initial version